--- a/version2.tex
+++ b/version2.tex
@@ -567,6 +567,7 @@ where $T_{end}$ is the final simulation time [$T$], which is indeed the root mea
 
 
 \end{enumerate}
+
 We conducted multi-objective optimization. However, it is apparent that minimizing the objective function~\eqref{objektiva1} also minimizes the objective functions~\eqref{objektiva2} and \eqref{objektiva3}. The aim of this multi-objective definition was to improve the conditioning of this inverse problem. If we only considered the objective function~\eqref{objektiva1}, then we were probably able to obtain the same solution as with this multi-objective definition with slower convergence of optimization procedure only (the selection of the optimization algorithm will be explained in the following section~\ref{optima}). This multi-objective function definition is based on our experience from previous attempts of inverse analysis of this infiltration problem.
 
 
@@ -575,12 +576,12 @@ We conducted multi-objective optimization. However, it is apparent that minimizi
 \label{optima}
 
 In this contribution we used the modified genetic algorithm GRADE \citep{grade,Kucerova:2007:PHD} supported by niching method CERAF \citep{Hrstka} enhancing the algorithm with
-memory and restarts. GRADE is a real-coded genetic algorithm combining the ideas of genetic operators: cross-over, mutation and selection taken from the standard genetic algorithm and differential operators taken from differential evolution. When GRADE converges, the current position of the optimization algorithm is marked as a local extreme and a forbidden area is built around it in order to forbid the optimization algorithm to fall into the same local extreme again. The main setting of the optimization procedure was as follows: the population of the genetic algorithm contains 30 independent solutions, the whole identification stops after 20.000 objective function evaluations and a local extreme was marker after 600 evaluations without any improvement.
+memory and restarts. GRADE is a real-coded genetic algorithm combining the ideas of genetic operators: cross-over, mutation and selection taken from the standard genetic algorithm and differential operators taken from differential evolution. When GRADE converges, the current position of the optimization algorithm is marked as a local extreme and a forbidden area is built around it in order to forbid the optimization algorithm to fall into the same local extreme again. The main setting of the optimization procedure was as follows: the population of the genetic algorithm contains 30 independent solutions, the whole identification stops after 20.000 objective function evaluations and a local extreme was marked after 600 evaluations without any improvement.
 
 
 \subsubsection{Multi-objective Optimization}
 
- In this contribution Average Ranking (AR) \citep{Leps:2007} was used to deal with multi-objective definition. It sums ranks of the objective functions instead of the objective functions' values. Therefore, no weights are needed, however, the Pareto-dominance is not preserved as described in \cite{vitingerova:2010}. An application of the AR algorithm to parameters identification can be found in \cite{Kuraz:2010:JCAM}.
+ In this contribution Average Ranking (AR) \citep{Leps:2007} was used to deal with multi-objective definition. It sums ranks of the objective functions instead of the objective functions' values. Therefore, no weights are needed, however, the Pareto-dominance is not preserved as described in \cite{vitingerova:2010}. An application of the AR algorithm to parameters identification can be found in \cite{Kuraz:2010:JCAM}. 
 
 
 
@@ -588,10 +589,7 @@ memory and restarts. GRADE is a real-coded genetic algorithm combining the ideas
 \section{Results and discussion} %[michal, lukas]
 
 
-\begin{itemize}
-\item First of all - global sensitivity analyses. The sensitivity analyses was conducted for the objective function~\eqref{objektiva1} only.  In total 10.000 samples of the objective function \eqref{objektiva1} ($L_2$ norm of the model error) were evaluated, in order to obtain the  Total Sobol Index for each parameter~\citep{kniha-citlivost}. The values of the Total Sobol Indices are given in table~\ref{citlivost}. Since the evaluated Total Sobol Index for each parameter was nearly 0.9, our model exhibits an excellent sensitivity for all SHPs parameters. 
-
-
+The first procedure, which is typically required before proceeding the inverse modeling procedures, is  global sensitivity analyses on the selected parameter ranges, see table~\ref{rozsahy}. For simplicity the sensitivity analyses was conducted just for the first objective function~\eqref{objektiva1}. This strategy is in line with the statments given in the last paragraph of the section~\ref{objdef}. In total 10.000 samples of the objective function \eqref{objektiva1}  were evaluated, in order to obtain the  Total Sobol Index for each parameter~\citep{kniha-citlivost}. The values of the Total Sobol Indices are given in table~\ref{citlivost}. Since the evaluated Total Sobol Index for each parameter was nearly 0.9, our model exhibits an excellent sensitivity for all SHPs parameters. 
 
 \begin{table}[ht]
 \begin{center}
@@ -611,8 +609,9 @@ Total Sobol Index & 0.850 & 0.921 & 0.876 & 0.868 & 0.884 \\
 \end{center}
 \end{table}
 
+The first run with discretization level $r_f=0$ generated after 40.000 objective function calls (each call took approximately 3~min, executed on 32-core Intel(R) Xeon(R) CPU E5-2630, bogomips 4801.67) the local extremes are given in table~\ref{shp-vysledky}, where the gray lines refer to local extremes with bad fitting properties (extremes 1-4), the local extremes 5-8 refer to inverse model solutions with good fitting properties. An example of bad fitting dataset is depicted on figure~\ref{rf0examples} - left, and the example of the good fitting dataset is depicted on figure~\ref{rf0examples} - right. Solution for each dataset is then depicted in Appendix, see figures~\ref{rf0ex1}-\ref{rf0ex4}.
 
-\item the first run for $r_l$=0 generated after 40.000 objective function calls (each call took approx. 3min., executed on 32-core Intel XEON...) the following list of extremes
+
 
 \begin{center}
 \begin{table}[ht]
@@ -621,14 +620,14 @@ Total Sobol Index & 0.850 & 0.921 & 0.876 & 0.868 & 0.884 \\
 \begin{tabular}{l || c c c c c  }
 % \toprule
 no. & $\alpha$ [cm$^{-1}$] & $n$ [-] & $\theta_s$ [-] & $K_s$ [cm.hrs$^{-1}$] & $S_s$  [cm$^{-1}$] \\ \hline \hline
-\rowcolor{red}{\bf 1} & \num{2.447e-4} &  2.45 & 0.25 & \num{0.025} & \num{0.419e-2}   \\ 
-\rowcolor{red}{\bf 2} & \num{0.101e-2} & 0.6517 &  0.271 & \num{1.092} &  \num{2.879e-2}  \\ 
-\rowcolor{red}{\bf 3} & \num{1.840e-2} & 2.098 & 0.353 & \num{1.092} & \num{1.845e-4} \\
-\rowcolor{red}{\bf 4} & \num{0.157e-2} & 1.968 & 0.720 & \num{2.07} & \num{1.053e-5}  \\ \hline \hline
-\rowcolor{cyan}{\bf 5} & \num{0.150e-2} & 1.586 & 0.720 &  \num{1.093} &  \num{7.641e-3}  \\
-\rowcolor{cyan}{\bf 6} & \num{0.258e-2} & 2.152  & 0.401 &  \num{1.095} & 0  \\ 
-\rowcolor{cyan}{\bf 7} & \num{0.3802e-2} & 1.279 & 0.594 &  \num{1.165} & 0  \\ 
-\rowcolor{cyan} {\bf 8} & \num{0.255e-2} & 1.384 & 0.254 &  \num{1.119} &  \num{1.922e-4}  \\ \hline
+\rowcolor{gray}{\bf 1} & \num{2.447e-4} &  2.45 & 0.25 & \num{0.025} & \num{0.419e-2}   \\ 
+\rowcolor{gray}{\bf 2} & \num{0.101e-2} & 0.6517 &  0.271 & \num{1.092} &  \num{2.879e-2}  \\ 
+\rowcolor{gray}{\bf 3} & \num{1.840e-2} & 2.098 & 0.353 & \num{1.092} & \num{1.845e-4} \\
+\rowcolor{gray}{\bf 4} & \num{0.157e-2} & 1.968 & 0.720 & \num{2.07} & \num{1.053e-5}  \\ \hline \hline
+\rowcolor{white}{\bf 5} & \num{0.150e-2} & 1.586 & 0.720 &  \num{1.093} &  \num{7.641e-3}  \\
+\rowcolor{white}{\bf 6} & \num{0.258e-2} & 2.152  & 0.401 &  \num{1.095} & 0  \\ 
+\rowcolor{white}{\bf 7} & \num{0.3802e-2} & 1.279 & 0.594 &  \num{1.165} & 0  \\ 
+\rowcolor{white} {\bf 8} & \num{0.255e-2} & 1.384 & 0.254 &  \num{1.119} &  \num{1.922e-4}  \\ \hline
 % \toprule
 \end{tabular}
  \end{footnotesize}
@@ -636,14 +635,63 @@ no. & $\alpha$ [cm$^{-1}$] & $n$ [-] & $\theta_s$ [-] & $K_s$ [cm.hrs$^{-1}$] & 
 \end{table}
 \end{center}
 
-\item red produced bad fit, cyan produced good fit
-
+\begin{figure}
 \rotatebox{-90}{
 {\includegraphics[height=7cm]{images/husny/4.eps}}}
-
-
 \rotatebox{-90}{
 {\includegraphics[height=7cm]{images/hezky/1.eps}}}
+\label{rf0examples}
+\caption{Left: Local extreme 1 -- bad fitting properties, Right: Local extreme 5 -- good fitting properties}
+\end{figure}
+
+\section{Appendix}
+
+\begin{figure}
+\rotatebox{-90}{
+{\includegraphics[height=7cm]{images/badfit/1.eps}}}
+\rotatebox{-90}{
+{\includegraphics[height=7cm]{images/badfit/2.eps}}}
+\label{rf0ex1}
+\caption{Refinement level $r_f=0$: Local extreme 1 , Right: Local extreme 2.}
+\end{figure}
+
+
+\begin{figure}
+\rotatebox{-90}{
+{\includegraphics[height=7cm]{images/badfit/3.eps}}}
+\rotatebox{-90}{
+{\includegraphics[height=7cm]{images/badfit/4.eps}}}
+\label{rf0ex2}
+\caption{Refinement level $r_f=0$: Local extreme 3 , Right: Local extreme 4.}
+\end{figure}
+
+
+\begin{figure}
+\rotatebox{-90}{
+{\includegraphics[height=7cm]{images/goodfit/5.eps}}}
+\rotatebox{-90}{
+{\includegraphics[height=7cm]{images/goodfit/6.eps}}}
+\label{rf0ex3}
+\caption{Refinement level $r_f=0$: Local extreme 5 , Right: Local extreme 6.}
+\end{figure}
+
+\begin{figure}
+\rotatebox{-90}{
+{\includegraphics[height=7cm]{images/goodfit/7.eps}}}
+\rotatebox{-90}{
+{\includegraphics[height=7cm]{images/goodfit/8.eps}}}
+\label{rf0ex4}
+\caption{Refinement level $r_f=0$: Local extreme 7 , Right: Local extreme 8.}
+\end{figure}
+
+
+\begin{itemize}
+ 
+
+
+
+
+
 
 \item the cyan data were further evaluated by increasing the refinement level $r_f$ (red datasets were rejected)
 
